--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "ldrc"
 version = "0.1.0"
 edition = "2021"
+description = "Linux Docker Rust Compiler for Windows"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 fs_extra = "1.3.0"
+
